# docs/swagger.json
@@ -28,6 +28,18 @@
                 "responses": {}
             }
         },
+        "/auth/refresh": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Refresh token rotation handler",
+                "responses": {}
+            }
+        },
         "/healthCheck": {
             "get": {
                 "consumes": [
