# internal/api/v1/v1.go
@@ -4,14 +4,20 @@ import (
 	docs "nyeh-back/docs"
 	handler "nyeh-back/internal/handler"
 	auth "nyeh-back/internal/handler/auth"
-	"nyeh-back/internal/handler/me"
+	me "nyeh-back/internal/handler/me"
 	mid "nyeh-back/internal/middleware"
 
 	"github.com/go-chi/chi/v5"
 	httpSwagger "github.com/swaggo/http-swagger"
 )
 
-func SetupApiV1(r chi.Router, base_path string) {
+// RouterDependencies holds all the fully-built handlers
+type V1RouterDependencies struct {
+	AuthHandler *auth.AuthHandler
+	MeHandler   *me.MeHandler
+}
+
+func SetupApiV1(r chi.Router, base_path string, v1Deps V1RouterDependencies) {
 
 	docs.SwaggerInfo.Title = "NYEH-BACK API DOCS"
 	docs.SwaggerInfo.BasePath = base_path
@@ -19,22 +25,23 @@ func SetupApiV1(r chi.Router, base_path string) {
 
 	r.Get("/swagger/*", httpSwagger.Handler())
 	r.Get("/healthCheck", handler.HealthCheckHandler)
-	authRouter(r, "/auth")
+	authRouter(r, "/auth", v1Deps.AuthHandler)
 
 	r.Group(func(r chi.Router) {
 		r.Use(mid.RequireAuth)
-		r.Get("/me", me.MeHandler)
-		r.Post("/me", me.PostMeHandler)
+		r.Get("/me", v1Deps.MeHandler.GetMeHandler)
+		r.Post("/me", v1Deps.MeHandler.PostMeHandler)
 	})
 }
 
-func authRouter(r chi.Router, baseUrl string) {
+func authRouter(r chi.Router, baseUrl string, authDeps *auth.AuthHandler) {
 	r.Route(baseUrl, func(r chi.Router) {
 
 		r.Route("/google", func(r chi.Router) {
-			r.Get("/login", auth.GoogleLoginHandler)
-			r.Get("/callback", auth.GoogleCallbackHandler)
+			r.Get("/login", authDeps.GoogleLoginHandler)
+			r.Get("/callback", authDeps.GoogleCallbackHandler)
 		})
-
+		r.Post("/refresh", authDeps.RefreshHandler)
+		// TODO: add logout
 	})
 }
